Refactor theme and hero image, remove ThemeIcon component
Replaced the PNG hero image with a JPG version and updated references. Removed the ThemeIcon.astro component and inlined the GitHub SVG icon in Welcome.astro. Improved theme toggle button styling and simplified background/transition classes in Layout.astro and Welcome.astro for a cleaner look.

--- a/src/components/ThemeToggleButton.astro
+++ b/src/components/ThemeToggleButton.astro
@@ -4,7 +4,7 @@
 <label class="relative inline-block w-16 h-8">
   <input type="checkbox" id="theme-toggle" class="opacity-0 w-0 h-0" aria-label="Toggle theme" />
   <span class="absolute cursor-pointer top-0 left-0 right-0 bottom-0 bg-gray-300 dark:bg-gray-700 transition duration-300 rounded-full"></span>
-  <span class="slider absolute h-6 w-6 left-1 bottom-1 bg-white transition-all duration-300 rounded-full flex items-center justify-center">
+  <span class="slider absolute h-6 w-6 left-1 bottom-1 bg-white dark:bg-gray-400 transition-all duration-300 rounded-full flex items-center justify-center">
     <img src="/src/assets/icons/light_mode.svg" alt="Modo claro" class="icon-light w-5 h-5 transition-all duration-300" />
     <img src="/src/assets/icons/dark_mode.svg" alt="Modo oscuro" class="icon-dark w-5 h-5 hidden transition-all duration-300" />
   </span>
